# hal-9000

./: .ansible-lint  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.txt
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: lint-on-edit.sh  sync-dotfiles.sh
.claude/rules/: plugins.md
.claude/skills/bump-hal-plugin-version/: SKILL.md
.claude/skills/bump-hal-voice-version/: SKILL.md
.claude/skills/bump-plugin-version/: SKILL.md
.claude/skills/sync-skills/: SKILL.md
.claude/skills/update-playbooks/: SKILL.md
.codex/: hooks.json
.codex/hooks/: sync-dotfiles.sh
.entire/: settings.json
.github/workflows/: detect-secrets.yml  scan-secrets.yml  validate-ansible-playbooks.yml
docker/: bootsync.sh  dash.yml
dotfiles/: .gitconfig  .gitignore_global  .hal_completion.zsh  .huskyrc  .iterm2_shell_integration.zsh  .iterm2_tab_color.zsh  .mackup.cfg  .pdbrc  .tmux.conf  .zshrc  CLAUDE.md  hal_dotfiles.json  hal_dotfiles.template.json
dotfiles/.claude/: CLAUDE.md  settings.json
dotfiles/.claude/agents/: blockchain-developer.md  committer.md  context7-docs-checker.md  git-commit-organizer.md  web-search-expert.md
dotfiles/.claude/commands/: commit-by-relevance.md  commit.md  find-code.md  pair-with-gemini.md  spawn-subagents.md  subagent-tasks.md  subagents.md  understand.md
dotfiles/.claude/hooks/: guard-bash-paths.py
dotfiles/.claude/rules/: css-html.md  github-actions.md  python.md  shell.md  typescript-javascript.md
dotfiles/.claude/skills/code-search/: SKILL.md
dotfiles/.claude/skills/codex/: SKILL.md
dotfiles/.claude/skills/commit/: SKILL.md
dotfiles/.claude/skills/gemini/: SKILL.md
dotfiles/.claude/skills/gemini-cli/: SKILL.md
dotfiles/.claude/skills/understand-codebase/: SKILL.md
dotfiles/.claude/skills/update-allowed-tools/: SKILL.md
dotfiles/.claude/statusline/: README.md  hal-statusline.py  run.py
dotfiles/.codex/: AGENTS.md  config.toml
dotfiles/.codex/rules/: default.rules
dotfiles/.config/ghostty/: config
dotfiles/.gemini/: settings.json
dotfiles/.gemini/antigravity-cli/: settings.json
dotfiles/.mackup/: manico.cfg  robo-3t.cfg
dotfiles/.playwright/: cli.config.json
dotfiles/.tmuxp/: october-vertical.yaml  swag-logs.yaml  swag-long.yaml  swag-vertical.yaml  swag.yaml
playbooks/: ansible.cfg  hosts  site.yml
playbooks/roles/ai/tasks/: main.yml
playbooks/roles/anaconda/files/: anaconda_profile
playbooks/roles/aws/tasks/: main.yml
playbooks/roles/basic/files/: hal_profile  hal_profile.sh
playbooks/roles/basic/tasks/: main.yml
playbooks/roles/basic/vars/: main.yml
playbooks/roles/bun/files/: bun_profile.sh
playbooks/roles/bun/tasks/: main.yml
playbooks/roles/dev/files/: hal_profile
playbooks/roles/dev/tasks/: docker.yml  dotfiles.yml  main.yml
playbooks/roles/docker/files/: Dockerfile  bootlocal.sh  d4m-nfs-mounts.txt  dash.yml  docker_machine_profile  fsync-patch.sh  hal.yml  (+3 more)
plugins/hal-skills/: .mcp.json
plugins/hal-skills/.claude-plugin/: plugin.json
plugins/hal-skills/agents/: committer.md
plugins/hal-skills/hooks/: guard-committer-bash.py  hooks.json
plugins/hal-statusline/: README.md  hal-statusline.py
plugins/hal-voice/: README.md  config.json  manifest.json
plugins/hal-voice/.claude-plugin/: plugin.json
plugins/hal-voice/commands/: hal-voice-toggle.md
plugins/hal-voice/hooks/: hooks.json
plugins/hal-voice/scripts/: hal-voice.py  hook_types.py
plugins/python-lsp-ty/: .lsp.json
plugins/python-lsp-ty/.claude-plugin/: plugin.json
scripts/: generate-completion.py  generate-completion.sh  install-hal-statusline.sh  install-statusline.sh
skills/codex/: SKILL.md
skills/commit/: SKILL.md
skills/explore-codebase/: SKILL.md
skills/explore-codebase/references/: fd.md
skills/gemini/: SKILL.md
skills/hal-skills/: .mcp.json
skills/hal-skills/.claude-plugin/: plugin.json
skills/hal-skills/best-practices/: SKILL.md
skills/hal-skills/commit/: SKILL.md
skills/hal-skills/magi/: README.md  SKILL.md
skills/hal-skills/refactor-agents-md/: SKILL.md
skills/hal-skills/refactor-claude-md/: SKILL.md
skills/hal-skills/second-opinions/: SKILL.md
skills/hal-skills/simple-english/: .gitignore  SKILL.md
skills/hal-skills/update-allowed-tools/: SKILL.md
skills/magi/: README.md  SKILL.md
skills/magi-ex/: README.md  SKILL.md
skills/magi-ex/personalities/: MAGI-1.md  MAGI-2.md  MAGI-3.md
skills/magi-ex/references/: codex.md  gemini.md
skills/magi-ex/templates/: MAGI-1.md  MAGI-2.md  MAGI-3.md
skills/magi/templates/: MAGI-1.md  MAGI-2.md  MAGI-3.md  agent-prompt-template.md  decision-log-template.md  discovery-log-template.md
skills/second-opinions/: SKILL.md
skills/second-opinions/references/: codex.md  gemini.md
skills/update-allowed-tools/: SKILL.md
tests/: test_hal.py
tests/dotfiles/: conftest.py  test_guard_bash_paths.py
tests/plugins/: conftest.py  test_committer_guard.py  test_hal_statusline.py  test_hal_voice.py
video/src/: Root.tsx
video/src/scenes/: BootstrapScene.tsx  CommandsScene.tsx  IntroScene.tsx  OutroScene.tsx
videos/hal-demo/: package.json  tsconfig.json
videos/hal-demo/src/: HAL9000Video.tsx
videos/hal-voice-demo/: package.json
videos/hal-voice-demo/src/: HalVoiceVideo.tsx  Root.tsx  styles.ts  utils.ts
(+79 files in other folders)
