[project]
name = "hal-9000"
version = "2001"
description = "Opinionated macOS development environment automation"
authors = [{ name = "Vinta Chen", email = "vinta.chen@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://vinta.ws/code/"
Repository = "https://github.com/vinta/hal-9000"

[dependency-groups]
test = ["pytest>=9.0.3"]
lint = ["ansible-lint>=26.1.1", "ruff>=0.15.2", "ty>=0.0.18"]
audit = ["detect-secrets>=1.5.0", "pip-audit>=2.10.0", "pre-commit>=4.5.1"]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "audit" },
    "argcomplete>=3.6.3",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 200
extend-include = ["bin/hal"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "COM812", # trailing comma (formatter conflict)
    "ISC001", # string concat (formatter conflict)
    "INP001", # implicit namespace package (no packages, all scripts)
    "T20",    # print statements (CLI tools)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN",     # type annotations not needed in tests
    "S101",    # assert is the standard for pytest
    "SLF001",  # testing private methods is intentional
    "PLR2004", # magic values are clear in test assertions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pycodestyle]
max-line-length = 200

[tool.pyright]
include = ["bin", "scripts", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
pythonPlatform = "Darwin"
typeCheckingMode = "strict"
executionEnvironments = [
    { root = "tests", reportUnknownMemberType = false, reportMissingParameterType = false, reportUnknownParameterType = false, reportUnknownVariableType = false, reportUnknownLambdaType = false, reportUnknownArgumentType = false },
]

[tool.ty.src]
include = [
    "bin/hal",
    "scripts",
    "plugins/hal-statusline",
    "plugins/hal-voice/scripts",
    "tests",
]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "error"
